<resources>
    <string name="app_name">AndroidTst</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels Like</string>
    <string name="min_temperature">Min Temp</string>
    <string name="max_temperature">Max Temp</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="get_weather">Get Weather</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
</resources>